Add product table

--- a/frontend/src/app/components/side-nav/side-nav.component.html
+++ b/frontend/src/app/components/side-nav/side-nav.component.html
@@ -38,7 +38,7 @@
       </span>
     </mat-toolbar>
 
-    <main>
+    <main class="m-2">
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
