Add qrcode scanner component

--- a/frontend/src/app/components/side-nav/side-nav.component.html
+++ b/frontend/src/app/components/side-nav/side-nav.component.html
@@ -11,9 +11,8 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/products" routerLinkActive="active">Produtos</a>
+      <a mat-list-item routerLink="/cart" routerLinkActive="active">Carrinho</a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -39,6 +38,7 @@
     </mat-toolbar>
 
     <main class="m-2">
+      <app-qrcode-scanner></app-qrcode-scanner>
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
