Add local storage and cart basic functions

--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -19,7 +19,11 @@
   </mat-card-content>
 
   <mat-card-actions class="text-center">
-    <button mat-raised-button color="primary">
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="addCartItem()"
+    >
       Adicionar ao carrinho
     </button>
   </mat-card-actions>
